--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,23 @@
     <!-- mengarah ke output hasil compilasi tailwind -->
     <link rel="stylesheet" href="../public/output.css">
 </head>
-<body>
-    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header h-screen flex justify-center items-center relative">
-        My projects!  
-            <div class="home-btn text-2xl block absolute border-black border-2 top-0 right-0 mr-3 rounded-full py-1 px-3 mt-2 transition-colors hover:bg-black hover:text-green-300 cursor-pointer"> home </div>
+<body class="overflow-x-hidden">
+    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header-500 h-screen flex justify-center items-center relative">
+        <span class="mx-auto block">My Project</span> 
+            <div class="container-button absolute flex justify-start flex-col top-0 right-0">
+                <div class="home-btn  btn-black"> home </div>
+                    <div class="about-btn  btn-black"> about </div>
+                <div class="follow-btn  btn-black"> follow </div>
+            </div>
+                <div class="tailwind-img absolute bottom-0 mb-2">
+                    <span class="text-lg font-bold ">created using tailwind</span>
+                        <img src="../img/tailwind.svg" class="w-40 text-center" alt="tailwind-img">
+                </div>
     </div>
     <div class="projects grid grid-cols-1 gap-2 mt-10 py-4 px-6 bg-green-300">
-        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> hello</div>
-        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> hello</div>
-        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> hello</div>
+        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
+        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
+        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
     </div>
 </body>
 </html>
