memposisikan teks ke tengah.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                 <div class="follow-btn  btn-black"> follow </div>
             </div>
                 <div class="tailwind-img absolute bottom-0 mb-2">
-                    <span class="text-lg font-bold ">created using tailwind</span>
+                    <span class="text-lg text-center font-bold ">created using tailwind</span>
                         <img src="../img/tailwind.svg" class="w-40 text-center" alt="tailwind-img">
                 </div>
     </div>
