--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
         <div class="container-button absolute flex justify-self-start flex-col top-0 left-0 ml-2">
             <div class="home-btn  btn-black">
                 home 
-                <div class="toolkit hidden">
+                <div class="toolkit">
                     <img src="../img/question-mark.svg" class="w-8 h-7" alt="home">
                 </div>
             </div>
             <div class="about-btn btn-black "> 
-                <div class="toolkit hidden">
+                <div class="toolkit">
                     <img src="../img/question-mark.svg" class="w-8 h-7" alt="about">
                 </div>
                 about 
             </div>
             <div class="follow-btn btn-black "> 
-                <div class="toolkit hidden">
+                <div class="toolkit">
                     <img src="../img/question-mark.svg" class="w-8 h-7" alt="follow">
                 </div>
                 follow 
