--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,19 @@
         <div class="container-button absolute flex justify-self-start flex-col top-0 left-0 ml-2">
             <div class="home-btn  btn-black">
                 home 
-                <div class="toolkit">
-                    <img src="../img/question-mark.svg" class="w-8 h-7" alt="home">
+                <div class="toolkit hidden">
+                    <img src="../img/home-icon.svg" class="home w-8 h-7 bg-green-300" alt="home">
                 </div>
             </div>
             <div class="about-btn btn-black "> 
-                <div class="toolkit">
-                    <img src="../img/question-mark.svg" class="w-8 h-7" alt="about">
+                <div class="toolkit hidden">
+                    <img src="../img/question-mark.svg" class="about w-8 h-7 bg-green-300" alt="about">
                 </div>
                 about 
             </div>
             <div class="follow-btn btn-black "> 
-                <div class="toolkit">
-                    <img src="../img/question-mark.svg" class="w-8 h-7" alt="follow">
+                <div class="toolkit hidden">
+                    <img src="../img/follow-cion.svg" class="follow w-8 h-7 bg-green-300" alt="follow">
                 </div>
                 follow 
             </div>
@@ -43,5 +43,6 @@
             <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
         <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
     </div>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
