telah menambahkan toolkit saat di hover pada button.

--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,19 @@
         <div class="container-button absolute flex justify-self-start flex-col top-0 left-0 ml-2">
             <div class="home-btn  btn-black">
                 home 
-                <div class="toolkit hidden">
-                    <img src="../img/home-icon.svg" class="home w-8 h-7 bg-green-300" alt="home">
+                <div class="toolkit hidden overflow-hidden">
+                    <img src="../img/home-icon.svg" class="home w-9 h-10 bg-green-300" alt="home">
                 </div>
             </div>
             <div class="about-btn btn-black "> 
                 <div class="toolkit hidden">
-                    <img src="../img/question-mark.svg" class="about w-8 h-7 bg-green-300" alt="about">
+                    <img src="../img/question-mark.svg" class="about w-9 h-10 bg-green-300" alt="about">
                 </div>
                 about 
             </div>
             <div class="follow-btn btn-black "> 
                 <div class="toolkit hidden">
-                    <img src="../img/follow-cion.svg" class="follow w-8 h-7 bg-green-300" alt="follow">
+                    <img src="../img/follow-cion.svg" class="follow w-9 h-10 bg-green-300" alt="follow">
                 </div>
                 follow 
             </div>
