added a huge black card.

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 </head>
 <!-- NOTES -->
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
-<body class="overflow-hidden">
-    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header-500 h-screen flex justify-self-start items-center relative">
+<body>
+    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative">
         <span class="mx-auto block">My Project</span> 
         <div class="container-button absolute flex justify-self-start flex-col top-0 left-0 ml-2">
             <div class="home-btn  btn-black">
@@ -38,10 +38,11 @@
                 <img src="../img/tailwind.svg" class="w-40 text-center mx-auto" alt="tailwind-img">
         </div>
     </div>
-    <div class="grid-projects grid grid-cols-1 gap-2 mt-10 py-4 px-6 bg-green-300">
-        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
-            <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
-        <div class="test h-[100px] bg-black rounded text-green-300 p-2 font-header text-center flex items-center justify-center text-3xl font-semibold"> canvases</div>
+    <!-- Content -->
+    <div class="container-content font-header font-extrabold bg-black mt-50">
+        <div>jalkdfklaskldflkalksjdf</div>
+        <div>aklaskdfjakdsfklaj;</div>
+        <div>adjfakljdflkakljl</div>
     </div>
     <script src="../JS/index.js"></script>
 </body>
