menambahkan bayangan pada grid-items.

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,18 @@
             </div>
         </div>
         <div class="container-img absolute bottom-0 right-[42%] flex flex-col">
-            <span class="text-lg text-center font-bold mx-auto block">Created using tailwindCSS</span>
+            <span class="text-xl text-center font-bold mx-auto block">Created using tailwindCSS</span>
                 <img src="../img/tailwind.svg" class="w-40 text-center mx-auto" alt="tailwind-img">
         </div>
     </div>
     <!-- Content -->
-    <div class="container-content font-header font-extrabold bg-black mt-50">
-        <div>jalkdfklaskldflkalksjdf</div>
-        <div>aklaskdfjakdsfklaj;</div>
-        <div>adjfakljdflkakljl</div>
+    <div class="container-content font-header font-extrabold bg-black text-center text-green-400">
+        <span class="text-8xl block p-4 text-center tracking-wide">find your favourite!</span>
+            <div class="grid-projects grid grid-cols-2 gap-2 p-2">
+                <div class="grid-item">canvases</div>
+                <div class="grid-item">Basic Ecommerce webiste</div>
+                <div class="grid-item col-span-2">Restful api</div>
+            </div>
     </div>
     <script src="../JS/index.js"></script>
 </body>
