--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,6 @@
                 <div class="grid-item col-span-2">Restful api</div>
             </div>
     </div>
-    <script src="../JS/index.js"></script>
+    <script type="module" src="../JS/index.js"></script>
 </body>
 </html>
