--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,18 @@
         </div>
     </div>
     <!-- Content -->
-    <div class="container-content font-header font-extrabold bg-black text-center text-green-400">
+    <div class="container-content font-header font-extrabold bg-black text-center text-green-400 p-2">
         <span class="text-6xl block px-4 py-8 text-center tracking-wide">find your favourite!</span>
-            <div class="grid-projects grid grid-cols-2 gap-2 p-2 mt-20">
-                <div class="grid-item">canvases</div>
-                <div class="grid-item">Basic Ecommerce website</div>
-                <div class="grid-item">Restful api</div>
-            </div>
+           <div class="card">
+               canvases:
+               these are my canvas projects that i have built using vanilla js(no frameworks)
+           </div> 
+           <div class="card mr-auto">
+               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo sunt eos ut voluptatum soluta. Commodi modi nulla vero inventore delectus.
+           </div>
+           <div class="card">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sunt minus eligendi iste perferendis, amet mollitia cupiditate facilis consequuntur quos?
+           </div>
     </div>
     <script type="module" src="../JS/index.js"></script>
 </body>
