--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
 <body class="overflow-x-hidden"> 
     <!-- before classes is after the relative class -->
-    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative">
-        <div class="circle-decorator-t-r"></div>
-        <div class="circle-decorator-b-l"></div>
-        <div class="circle-decorator-b-r"></div>
+    <div class="header text-center bg-green-300 py-5 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative overflow-hidden">
+        <div class="circle-decorator-t-r "></div>
+        <div class="circle-decorator-b-l "></div>
+        <div class="circle-decorator-b-r "></div>
         <span class="mx-auto block">My Project</span> 
         <div class="container-button absolute flex justify-self-start flex-col top-0 left-0 ml-2">
             <div class="home-btn  btn-black">
