--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
 <body class="overflow-x-hidden"> 
     <!-- before classes is after the relative class -->
+    <div></div>
     <div class="header text-center bg-green-300 py-6 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative overflow-hidden">
         <div class="circle-decorator-t-r "></div>
         <div class="circle-decorator-b-l "></div>
@@ -46,14 +47,14 @@
     <div class="container-content font-header font-extrabold bg-black text-center text-green-400 p-2">
         <span class="text-6xl block px-4 py-8 text-center tracking-wide">find your favourite!</span>
             <div class="container-3card flex justify-center ">
-                <div class="card">
+                <div class="card canvas">
                     canvases:
                     these are my canvas projects that i have built using vanilla js(no frameworks)
                 </div> 
-                <div class="card">
+                <div class="card ecom">
                     copying an ecommerce card feature
                 </div>
-                <div class="card">
+                <div class="card other">
                     other...
                 </div>
             </div>
