menambahkan content pada dialogbox sesuai tombol c e dan o.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
 <body class="overflow-x-hidden"> 
     <!-- before classes is after the relative class -->
-    <div class="dialogbox opacity-0"></div>
+    <div class="dialogbox opacity-0">
+       
+    </div>
     <div class="header text-center bg-green-300 py-6 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative overflow-hidden">
         <div class="circle-decorator-t-r "></div>
         <div class="circle-decorator-b-l "></div>
@@ -52,7 +54,7 @@
                     these are my canvas projects that i have built using vanilla js(no frameworks)
                 </div> 
                 <div class="card ecom">
-                    copying an ecommerce card feature
+                    copying an ecommerce cart feature
                 </div>
                 <div class="card other">
                     other...
