--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,6 @@
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
 <body class="overflow-x-hidden"> 
     <!-- before classes is after the relative class -->
-    <div class="dialogbox opacity-0">
-       
-    </div>
     <div class="header text-center bg-green-300 py-6 px-3 text-8xl font-header font-extrabold h-screen flex justify-self-start items-center relative overflow-hidden">
         <div class="circle-decorator-t-r "></div>
         <div class="circle-decorator-b-l "></div>
@@ -46,7 +43,7 @@
         </div>
     </div>
     <!-- Content -->
-    <div class="container-content font-header font-extrabold bg-black text-center text-green-400 p-2">
+    <div class="container-content-header font-header font-extrabold bg-black text-center text-green-400 p-2">
         <span class="text-6xl block px-4 py-8 text-center tracking-wide">find your favourite!</span>
             <div class="container-3card flex justify-center ">
                 <div class="card canvas">
@@ -60,7 +57,14 @@
                     other...
                 </div>
             </div>
-    </div>
+        </div>
+        <!-- Content -->
+        <div class="container-content flex flex-col items-center gap-4 bg-green-300 text-black text-xl font-header font-bold p-5">
+            <div class="container-content-item balls">falling Balls</div>
+            <div class="container-content-item cart">cart</div>
+            <div class="container-content-item oth">other...</div>
+        </div>
+    
     <script type="module" src="../JS/index.js"></script>
 </body>
 </html>
