menambahkan file routing.js

--- a/src/index.html
+++ b/src/index.html
@@ -66,5 +66,6 @@
         </div>
     
     <script type="module" src="../JS/index.js"></script>
+    <script type="module" src="../JS/routing.js"></script>
 </body>
 </html>
