memindahkan index.html ke dalam root.

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <div class="home-btn  btn-black">
                 home 
                 <div class="toolkit hidden overflow-hidden">
-                    <img src="../img/home-icon.svg" class="home w-9 h-10 bg-green-300" alt="home">
+                    <img src="./img/home-icon.svg" class="home w-9 h-10 bg-green-300" alt="home">
                 </div>
             </div>
             <div class="about-btn btn-black "> 
                 <div class="toolkit hidden">
-                    <img src="../img/question-mark.svg" class="about w-9 h-10 bg-green-300" alt="about">
+                    <img src="./img/question-mark.svg" class="about w-9 h-10 bg-green-300" alt="about">
                 </div>
                 about 
             </div>
             <div class="follow-btn btn-black "> 
                 <div class="toolkit hidden">
-                    <img src="../img/follow-cion.svg" class="follow w-9 h-10 bg-green-300" alt="follow">
+                    <img src="./img/follow-cion.svg" class="follow w-9 h-10 bg-green-300" alt="follow">
                 </div>
                 follow 
             </div>
         </div>
         <div class="container-img absolute bottom-0 right-[42%] flex flex-col">
             <span class="text-xl text-center font-bolder mx-auto block">Created using tailwindCSS</span>
-                <img src="../img/tailwind.svg" class="w-40 text-center mx-auto" alt="tailwind-img">
+                <img src="./img/tailwind.svg" class="w-40 text-center mx-auto" alt="tailwind-img">
         </div>
     </div>
     <!-- Content -->
@@ -65,7 +65,7 @@
             <div class="container-content-item oth">other...</div>
         </div>
     
-    <script type="module" src="../JS/index.js"></script>
-    <script type="module" src="../JS/routing.js"></script>
+    <script type="module" src="./JS/index.js"></script>
+    <script type="module" src="./JS/routing.js"></script>
 </body>
 </html>
