--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
     <!-- mengarah ke output hasil compilasi tailwind -->
-    <link rel="stylesheet" href="../public/output.css">
+    <link rel="stylesheet" href="./public/output.css">
 </head>
 <!-- NOTES -->
 <!-- 1.set toolkit to hidden in the future im going to use typescript for removing the hidden class -->
