menghapus routes.js.

--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
         </div>
     
     <script type="module" src="./JS/index.js"></script>
+    <script type="module" src="./route.js"></script>
 </body>
 </html>
