menambahkan responsif class.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="container-img absolute bottom-0 right-[42%] flex flex-col">
-            <span class="text-xl text-center font-bolder mx-auto block">Created using tailwindCSS</span>
+            <span class="sm:text-sm sm:text-center sm:font-bolder sm:mx-auto block text-cyan-400">Created using tailwindCSS</span>
                 <img src="./img/tailwind.svg" class="w-40 text-center mx-auto" alt="tailwind-img">
         </div>
     </div>
